--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
     <li>Colegio Refous</li>
   </ul>
-  <a href="Hobbies.html">My Hobbies</a>
-  <a href="Contact.html"> CONTACT ME</a>
+
   <h3>Experiencia Laboral</h3>
   <table border="1">
     <thead>
@@ -97,6 +96,8 @@
 
 
   <hr>
+  <a href="Hobbies.html">MIS HOBBIES</a>
+  <a href="Contact.html"> CONTACTO</a>
 </body>
 
 </html>
