--- a/Hobbies.html
+++ b/Hobbies.html
@@ -8,9 +8,9 @@
     <h3>Hobbies</h3>
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Climbing">Climbing</a></li>
-      <li>Video Games</li>
+      <li>Video Juegos</li>
       <li><a href="https://magic.wizards.com/en">Magic The Gathering</a></li>
-      <li>Coocking</li>
+      <li>Gastronomía</li>
     </ul>
 
   </body>
