--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Call Me</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 
 <body>
@@ -12,11 +15,12 @@
     <li><strong>mobile</strong> : +57 3008441007</li>
     <li><strong>Email</strong>: jpsc1117@gmail.com</li>
   </ul>
-  <form  action="mailto:jpsc1117@gmail.com" method="post" enctype="text/plain">
+  <hr>
+  <form action="mailto:jpsc1117@gmail.com" method="post" enctype="text/plain">
     <label>Nombre:</label>
     <input type="text" name="YourName" value="">
     <br>
-    <label>Email:  </label>
+    <label>Email: </label>
     <input type="text" name="Email" value="">
     <br>
     <label>Mensaje:</label><br>
