--- a/Hobbies.html
+++ b/Hobbies.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h3>Hobbies</h3>
-    <ul>
-      <li><a href="https://en.wikipedia.org/wiki/Climbing">Climbing</a></li>
-      <li>Video Juegos</li>
-      <li><a href="https://magic.wizards.com/en">Magic The Gathering</a></li>
-      <li>Gastronomía</li>
-    </ul>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
+<body>
+  <h3>Hobbies</h3>
+  <ul>
+    <li><a href="https://en.wikipedia.org/wiki/Climbing">Climbing</a></li>
+    <li>Video Juegos</li>
+    <li><a href="https://magic.wizards.com/en">Magic The Gathering</a></li>
+    <li>Gastronomía</li>
+  </ul>
+
+</body>
+
 </html>
