--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 <head>
   <meta charset="utf-8">
   <title>♥ Jean Pierre's Personal site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 
 <body>
   <table cellspacing='30'>
     <tr>
-      <td><img src="mifoto.jpg" alt="Foto de Jean" style="width:160px;"></td>
+      <td><img src="images/mifoto.jpg" alt="Foto de Jean" style="width:160px;"></td>
       <td>
         <h1>Jean Pierre Segura Castañeda</h1>
         <p><em>Ingeniero mecanico de la <strong><a href="https://unal.edu.co/">UNAL</a></strong></em></p>
