--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing='30'>
     <tr>
-      <td><img src="images/mifoto.jpg" alt="Foto de Jean" style="width:160px;"></td>
+      <td><img class="profile" src="images/mifoto.jpg" alt="Foto de Jean" style="width:160px;"></td>
       <td>
         <h1>Jean Pierre Segura Castañeda</h1>
         <p><em>Ingeniero mecanico de la <strong><a href="https://unal.edu.co/">UNAL</a></strong></em></p>
@@ -32,7 +32,7 @@
   </ul>
 
   <h3>Experiencia Laboral</h3>
-  <table border="1">
+  <table >
     <thead>
       <tr>
         <th>Fecha</th>
@@ -49,7 +49,7 @@
   <hr>
   <h3>Habilidades</h3>
 
-  <table border="1">
+  <table >
     <tr>
       <td>
         <table>
