Cambios de color en links

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <a class="footer-link" href="https://www.linkedin.com/in/jean-pierre-segura-castaneda/">LinkedIn</a>
           </td>
           <td>
-            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://twitter.com/nosoyfrances">Twitter</a>
           </td>
           <td>
-            <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+            <a class="footer-link" href="https://www.instagram.com/no_soy_frances/?hl=en">Instagram</a>
           </td>
         </tr>
     </table>
